src/widgets/snapshots/rstv__widgets__terminal__tests__draw_empty_terminal.snap
---
source: src/widgets/terminal.rs
expression: "render_terminal(&mut t, 20, 5)"
---
size: 20x5
cursor: hidden
text:
|                    |
|                    |
|                    |
|                    |
|                    |
attr:
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(255,255,85) bg=RGB(0,0,170)
